--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -1,7 +1,73 @@
 :root {
-  --home-card-w: rgba(255, 255, 255, 0.3);
-  --home-card-b: rgba(0, 0, 0, 0.1);
+  --home-card-w: rgba(255, 255, 255, 0.1);
+  --home-card-b: rgba(0, 0, 0, 0.6);
 }
-.home {
+
+/* .home {
   text-align: center;
+} */
+
+.home img {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  z-index: -1;
 }
+
+.home .home-bg .color-layer {
+  position: fixed;
+  background-color: var(--home-card-b);
+  width: 100%;
+  min-height: 100%;
+  z-index: -1;
+}
+
+.home .heading {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 46%;
+}
+
+.home h1 {
+  text-align: center;
+  margin: 0;
+
+  font-size: 12vw;
+  /* color: lavender; */
+  color: white;
+  /* box-shadow: 100px; */
+
+  /* font-family: Arial, Helvetica, sans-serif; */
+  /* font-weight: bold;   */
+}
+
+.home .creator {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 70%;
+
+  display: flex;
+  flex-wrap: wrap;
+  line-height: 1.1;
+}
+
+.home .creator :nth-child(1) {
+  font-size: 6vw;
+
+  color: lightblue;
+}
+
+.home .creator :nth-child(2) {
+  font-size: 6vw;
+  font-weight: bold;
+
+  color: lemonchiffon;
+}
+
+/* responsive */
+
+/* @media (max-width: 110vh) {
+} */
